tests/ui/type-alias-impl-trait/non-defining-method.stderr
error[E0792]: expected generic type parameter, found `u32`
  --> $DIR/non-defining-method.rs:16:32
   |
LL |     type Bar<T> = impl Sized;
   |              - this generic parameter must be used with a generic type parameter
LL |     fn foo() -> Self::Bar<u32> {}
   |                                ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
